--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,10 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+		        	<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/about">About</a></li>
+	        		<li><a href="/contact">Contact</a></li>
+				<li><a href="twitter.com/bnpluss">Twitter</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,8 +22,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li>Copyright &copy; 2019</li>
 				</ul>
 			</footer>
 		</body>
