--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		        	<li><a href="/blog">Blog</a></li>
 	        		<li><a href="/about">About</a></li>
 	        		<li><a href="/contact">Contact</a></li>
-				<li><a href="twitter.com/bnpluss">Twitter</a></li>
+				<li><a href="https://twitter.com/bnpluss">Twitter</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
